--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,10 @@ Markdown==3.3.4
 parso==0.8.2
 psycopg2-binary==2.8.6
 pycodestyle==2.7.0
+python-slugify==5.0.2
 pytz==2021.1
 six==1.16.0
 soupsieve==2.2.1
 sqlparse==0.4.1
+text-unidecode==1.3
 toml==0.10.2
