--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
+appdirs==1.4.4
 asgiref==3.3.4
 beautifulsoup4==4.9.3
+black==21.6b0
+click==8.0.1
 Django==3.2.4
 django-datetime-widget2==0.9.5
 django-filter==2.4.0
@@ -7,12 +10,16 @@ django-simple-history==3.0.0
 django-taggit==1.4.0
 django-taggit-serializer==0.1.7
 djangorestframework==3.12.4
+lorem-text==1.5
 Markdown==3.3.4
+mypy-extensions==0.4.3
 parso==0.8.2
+pathspec==0.8.1
 psycopg2-binary==2.8.6
 pycodestyle==2.7.0
 python-slugify==5.0.2
 pytz==2021.1
+regex==2021.4.4
 six==1.16.0
 soupsieve==2.2.1
 sqlparse==0.4.1
